# unified-python-sdk

./: .gitignore  README.md  RELEASES.md  USAGE.md  files.gen  gen.yaml  pylintrc  pyproject.toml  setup.py
.github/workflows/: speakeasy_sdk_generation.yml
.speakeasy/: workflow.yaml
docs/models/operations/: categories.md  createaccountingaccount2request.md  createaccountingaccount2response.md  createaccountingaccountrequest.md  createaccountingaccountresponse.md  createaccountingaccountsecurity.md  (+5038 more)
scripts/: prepare-readme.py  prepare_readme.py
src/unified_python_sdk/: _version.py  account.py  accounting.py  activation.py  activity.py  ad.py  ads.py  analytics.py  apicall.py  application.py  applicationstatus.py  assessment.py  ats.py  auth.py  availability.py  balancesheet.py  bankaccount.py  basesdk.py  benefit.py  bill.py  branch.py  busy.py  calendar.py  call.py  campaign.py  candidate.py  carrier.py  cashflow.py  category.py  cdp.py  change.py  channel.py  class_.py  clubs.py  collection.py  comment.py  commerce.py  commit.py  company.py  connection.py  (+122 more)
src/unified_to/: account.py  accounting.py  activity.py  agent.py  apicall.py  application.py  applicationstatus.py  ats.py  auth.py  branch.py  call.py  candidate.py  channel.py  class_.py  collection.py  commerce.py  commit.py  company.py  connection.py  contact.py  course.py  crm.py  customer.py  deal.py  document.py  employee.py  enrich.py  event.py  file.py  genai.py  group.py  hris.py  instructor.py  integration.py  interview.py  inventory.py  invoice.py  issue.py  item.py  job.py  (+49 more)
(+4120 files in other folders)
