[tool.poetry]
name = "Unified-python-sdk"
version = "0.28.4"
description = "Python Client SDK for Unified.to"
authors = ["Unified API Inc.",]
readme = "README-PYPI.md"
repository = "https://github.com/unified-to/unified-python-sdk.git"
packages = [
    { include = "unified_python_sdk", from = "src" }
]
include = ["py.typed", "src/unified_python_sdk/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/unified_python_sdk/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.8"
eval-type-backport = "^0.2.0"
httpx = "^0.28.1"
jsonpath-python = "^1.0.6"
pydantic = "~2.10.3"
python-dateutil = "^2.8.2"
typing-inspect = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "==1.13.0"
pylint = "==3.2.3"
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


